[package]
description = "Regular expression set parser at run time."
name = "re-set"

edition.workspace = true
license.workspace = true
version.workspace = true

[workspace]
members = ["macros"]
package.edition = "2021"
package.license = "Apache-2.0"
package.version = "0.1.1"
resolver = "2"

[dependencies]
regex = "1.7.1"
regex-syntax = "0.6.28"
