[package]
description = "Regular expression set parser at compile time."
edition = "2021"
license-file = "LICENSE"
name = "re-set-macros"
version = "0.0.2-alpha.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
re-set = { path = "../" }
regex = "1.7.1"
regex-syntax = "0.6.28"
syn = "1.0.107"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
harness = false
name = "regex"
